Fixed deprecation error and set sourceEncoding